--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>To Do List</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h1>To Do List</h1>
+  <div class="toDoRow">
+    <input type="text" id="taskInput" class="taskInput" placeholder="Add a new task">
+    <input type="date" id="dateInput" class="dateInput" placeholder="Add a due date">
+    <button id="addTaskButton" class="addTaskButton">Add Task</button>
+  </div>
+<div class="taskList"> </div>
 
+<script src="script.js"></script>
 </body>
 </html>
